// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate has the correct error rate 1`] = `
Array [
  Object {
    "x": 1607435820000,
    "y": null,
  },
  Object {
    "x": 1607435880000,
    "y": 0,
  },
  Object {
    "x": 1607435940000,
    "y": 0,
  },
  Object {
    "x": 1607436000000,
    "y": 0,
  },
  Object {
    "x": 1607436060000,
    "y": null,
  },
  Object {
    "x": 1607436120000,
    "y": 0,
  },
  Object {
    "x": 1607436180000,
    "y": null,
  },
  Object {
    "x": 1607436240000,
    "y": 0,
  },
  Object {
    "x": 1607436300000,
    "y": 1,
  },
  Object {
    "x": 1607436360000,
    "y": 0,
  },
  Object {
    "x": 1607436420000,
    "y": null,
  },
  Object {
    "x": 1607436480000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1607436540000,
    "y": null,
  },
  Object {
    "x": 1607436600000,
    "y": 0.222222222222222,
  },
  Object {
    "x": 1607436660000,
    "y": null,
  },
  Object {
    "x": 1607436720000,
    "y": 1,
  },
  Object {
    "x": 1607436780000,
    "y": 0,
  },
  Object {
    "x": 1607436840000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1607436900000,
    "y": null,
  },
  Object {
    "x": 1607436960000,
    "y": 0,
  },
  Object {
    "x": 1607437020000,
    "y": null,
  },
  Object {
    "x": 1607437080000,
    "y": 0,
  },
  Object {
    "x": 1607437140000,
    "y": null,
  },
  Object {
    "x": 1607437200000,
    "y": 0.285714285714286,
  },
  Object {
    "x": 1607437260000,
    "y": 0,
  },
  Object {
    "x": 1607437320000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1607437380000,
    "y": null,
  },
  Object {
    "x": 1607437440000,
    "y": 0.5,
  },
  Object {
    "x": 1607437500000,
    "y": null,
  },
  Object {
    "x": 1607437560000,
    "y": 0,
  },
  Object {
    "x": 1607437620000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 1`] = `
Array [
  Object {
    "x": 1607436720000,
    "y": null,
  },
  Object {
    "x": 1607436780000,
    "y": 0,
  },
  Object {
    "x": 1607436840000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1607436900000,
    "y": null,
  },
  Object {
    "x": 1607436960000,
    "y": 0,
  },
  Object {
    "x": 1607437020000,
    "y": null,
  },
  Object {
    "x": 1607437080000,
    "y": 0,
  },
  Object {
    "x": 1607437140000,
    "y": null,
  },
  Object {
    "x": 1607437200000,
    "y": 0.285714285714286,
  },
  Object {
    "x": 1607437260000,
    "y": 0,
  },
  Object {
    "x": 1607437320000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1607437380000,
    "y": null,
  },
  Object {
    "x": 1607437440000,
    "y": 0.5,
  },
  Object {
    "x": 1607437500000,
    "y": null,
  },
  Object {
    "x": 1607437560000,
    "y": 0,
  },
  Object {
    "x": 1607437620000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 2`] = `
Array [
  Object {
    "x": 1607436720000,
    "y": null,
  },
  Object {
    "x": 1607436780000,
    "y": 0,
  },
  Object {
    "x": 1607436840000,
    "y": 0,
  },
  Object {
    "x": 1607436900000,
    "y": 0,
  },
  Object {
    "x": 1607436960000,
    "y": null,
  },
  Object {
    "x": 1607437020000,
    "y": 0,
  },
  Object {
    "x": 1607437080000,
    "y": null,
  },
  Object {
    "x": 1607437140000,
    "y": 0,
  },
  Object {
    "x": 1607437200000,
    "y": 1,
  },
  Object {
    "x": 1607437260000,
    "y": 0,
  },
  Object {
    "x": 1607437320000,
    "y": null,
  },
  Object {
    "x": 1607437380000,
    "y": 0.142857142857143,
  },
  Object {
    "x": 1607437440000,
    "y": null,
  },
  Object {
    "x": 1607437500000,
    "y": 0.222222222222222,
  },
  Object {
    "x": 1607437560000,
    "y": null,
  },
  Object {
    "x": 1607437620000,
    "y": 1,
  },
]
`;
